[package]
name = "tun-tap-new"
# Also don't forget to update the version in the html_root_url attribute in src/lib.rs
version = "0.1.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-tap"
repository = "https://github.com/vorner/tuntap"
readme = "README.md"
keywords = ["tun", "tap", "network"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[badges]
travis-ci = { repository = "vorner/tuntap" }
maintenance = { status = "passively-maintained" }



[build-dependencies]
cc = "~1"

[dependencies]
futures = "0.1"
libc =  "~0.2"
mio = "~0.6"
tokio =  "~0.1"

[dev-dependencies]
version-sync = "~0.5"
