[package]
name = "tun-tap-new"
# Also don't forget to update the version in the html_root_url attribute in src/lib.rs
version = "0.1.0" # Needs a version bump + release
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>","hortonbermen"] # Please add yourself here
description = "TUN/TAP interface wrapper"
documentation = "https://docs.rs/tun-driver"
repository = "https://github.com/hortonberman/tundriver"
readme = "README.md"
keywords = ["tun", "tap", "network"]
categories = ["network-programming"]
license = "Apache-2.0/MIT"

[badges]
# travis-ci = { repository = "vorner/tuntap" } ‒ either set your own travis or remove
maintenance = { status = "passively-maintained" } # You want to decide if/how you maintain this



[build-dependencies]
cc = "~1"

[dependencies]
futures = "0.1"
libc =  "~0.2"
mio = "~0.6"
tokio =  "~0.1"

[dev-dependencies]
version-sync = "~0.5"
